--- a/html/historico.html
+++ b/html/historico.html
@@ -44,8 +44,8 @@
                   Categoria
                 </a>
                 <ul class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-                  <li><a class="dropdown-item" href="#">Feminino</a></li>
-                  <li><a class="dropdown-item" href="#">Masculino</a></li>
+                  <li><a class="dropdown-item" href="feminino.html">Feminino</a></li>
+                  <li><a class="dropdown-item" href="masculino.html">Masculino</a></li>
                   <li><a class="dropdown-item" href="#">Crianças</a></li>
                   <li><a class="dropdown-item" href="#">Perfumaria</a></li>
                 </ul>
