sessão infantil e perfumaria

--- a/html/entrar.html
+++ b/html/entrar.html
@@ -46,8 +46,8 @@
                 <ul class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
                   <li><a class="dropdown-item" href="feminino.html">Feminino</a></li>
                   <li><a class="dropdown-item" href="masculino.html">Masculino</a></li>
-                  <li><a class="dropdown-item" href="#">Crianças</a></li>
-                  <li><a class="dropdown-item" href="#">Perfumaria</a></li>
+                  <li><a class="dropdown-item" href="infantil.html">Crianças</a></li>
+                  <li><a class="dropdown-item" href="perfumaria.html">Perfumaria</a></li>
                 </ul>
               </li>
               <li class="nav-item">
