--- a/html/infantil.html
+++ b/html/infantil.html
@@ -6,7 +6,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Document</title>
-  <link rel="stylesheet" href="../css/feminino.css">
+  <link rel="stylesheet" href="../css/infantil.css">
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.4/font/bootstrap-icons.css">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
@@ -76,17 +76,17 @@
   <main>
     <section>
       <div class="container">
-         <h2 class="text-center mt-4">Para eles!</h2>
+         <h2 class="text-center mt-4">As marcas que as <span>brasileiras</span> amammm!</h2>
          <div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
             <div class="carousel-inner">
               <div class="carousel-item active">
-                <img src="../images/kc.jpeg" class="d-block w-100" alt="...">
+                <img src="../images/barn.png" class="d-block w-100" alt="...">
               </div>
               <div class="carousel-item">
-                <img src="../images/tommy.png" class="d-block w-100" alt="...">
+                <img src="../images/malve.png" class="d-block w-100" alt="...">
               </div>
               <div class="carousel-item">
-                <img src="../images/nike.png" class="d-block w-100" alt="...">
+                <img src="../images/carter.png" class="d-block w-100" alt="...">
               </div>
             </div>
             <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="prev">
@@ -102,31 +102,31 @@
     </section>
     <section>
         <div class="container">
-            <h1 class="text-center mt-5">Calvin Klein</h1>
+            <h1 class="text-center mt-5">Brandilli</h1>
             <div class="row text-center image">
                 <div class="col-md-2">
-                    <img src="../images/ck1.jpeg" class="d-block img-fluid align-self-center" alt="..." style="width: 150px; height: 150px;">
-                    <p class="text-center">Camiseta Preta CK</p>
-                    <p class="text-center">R$ 129,90</p>
+                    <img src="../images/bran1.jpg" class="d-block img-fluid align-self-center" alt="..." style="width: 150px; height: 150px;">
+                    <p class="text-center">Conjunto Ursinho</p>
+                    <p class="text-center">R$ 125,90</p>
                 </div>
                 <div class="col-md-2">
-                    <img src="../images/ck2.jpeg" class="d-block img-fluid align-self-center" alt="..." style="width: 150px; height: 150px;">
-                    <p class="text-center">Camiseta Azul CL</p>
-                    <p class="text-center">R$ 79,90</p>
-                </div>
-                <div class="col-md-2">
-                    <img src="../images/ck3.jpeg" class="d-block img-fluid align-self-center" alt="..." style="width: 150px; height: 150px;">
-                    <p class="text-center">Kit 2 cuecas CK</p>
+                    <img src="../images/bran2.jpeg" class="d-block img-fluid align-self-center" alt="..." style="width: 150px; height: 150px;">
+                    <p class="text-center">Conjunto borboleta</p>
                     <p class="text-center">R$ 69,90</p>
                 </div>
                 <div class="col-md-2">
-                    <img src="../images/ck4.jpeg" class="d-block img-fluid align-self-center" alt="..." style="width: 150px; height: 150px;">
-                    <p class="text-center">Tênis Confort CK</p>
-                    <p class="text-center">R$ 229,90</p></div>
-                <div class="col-md-2">
-                    <img src="../images/ck5.jpg" class="d-block img-fluid align-self-center" alt="..." style="width: 150px; height: 150px;">
-                    <p class="text-center">Moleton Preto CK</p>
+                    <img src="../images/bran3.jpeg" class="d-block img-fluid align-self-center" alt="..." style="width: 150px; height: 150px;">
+                    <p class="text-center">Vestido elefante</p>
                     <p class="text-center">R$ 89,90</p>
+                </div>
+                <div class="col-md-2">
+                    <img src="../images/bran4.jpeg" class="d-block img-fluid align-self-center" alt="..." style="width: 150px; height: 150px;">
+                    <p class="text-center">Conjunto Praia</p>
+                    <p class="text-center">R$ 29,90</p></div>
+                <div class="col-md-2">
+                    <img src="../images/bran5.jpg" class="d-block img-fluid align-self-center" alt="..." style="width: 150px; height: 150px;">
+                    <p class="text-center">Blusa Dinossauro 3D</p>
+                    <p class="text-center">R$ 69,90</p>
                 </div>
             </div>
         </div>
@@ -135,31 +135,31 @@
     
     <section>
         <div class="container">
-            <h1 class="text-center mt-5">Tommy Hilfiger</h1>
+            <h1 class="text-center mt-5">Malvee Kids</h1>
             <div class="row text-center image">
                 <div class="col-md-2">
-                    <img src="../images/tommy1.jpg" class="d-block img-fluid align-self-center" alt="..." style="width: 150px; height: 150px;">
-                    <p class="text-center">Óculos</p>
-                    <p class="text-center">R$ 429,90</p>
+                    <img src="../images/malve1.jpg" class="d-block img-fluid align-self-center" alt="..." style="width: 150px; height: 150px;">
+                    <p class="text-center">Blusa de frio Skye</p>
+                    <p class="text-center">R$ 49,90</p>
                 </div>
                 <div class="col-md-2">
-                    <img src="../images/tommy2.jpg" class="d-block img-fluid align-self-center" alt="..." style="width: 150px; height: 150px;">
-                    <p class="text-center">Perfume cheiroso</p>
-                    <p class="text-center">R$ 589,90</p>
+                    <img src="../images/malve2.jpg" class="d-block img-fluid align-self-center" alt="..." style="width: 150px; height: 150px;">
+                    <p class="text-center">Blusa de frio Chase</p>
+                    <p class="text-center">R$ 49,90</p>
                 </div>
                 <div class="col-md-2">
-                    <img src="../images/tommy3.jpeg" class="d-block img-fluid align-self-center" alt="..." style="width: 150px; height: 150px;">
-                    <p class="text-center">Blusa Preta</p>
-                    <p class="text-center">R$ 139,90</p>
+                    <img src="../images/malve3.jpeg" class="d-block img-fluid align-self-center" alt="..." style="width: 150px; height: 150px;">
+                    <p class="text-center">Blusa Manga Longa</p>
+                    <p class="text-center">R$ 88,90</p>
                 </div>
                 <div class="col-md-2">
-                    <img src="../images/tommy4.jpeg" class="d-block img-fluid align-self-center" alt="..." style="width: 150px; height: 150px;">
-                    <p class="text-center">Carteira</p>
-                    <p class="text-center">R$ 129,90</p></div>
+                    <img src="../images/malve4.jpeg" class="d-block img-fluid align-self-center" alt="..." style="width: 150px; height: 150px;">
+                    <p class="text-center">Vestido manga longa</p>
+                    <p class="text-center">R$ 59,90</p></div>
                 <div class="col-md-2">
-                    <img src="../images/tommy5.jpeg" class="d-block img-fluid align-self-center" alt="..." style="width: 150px; height: 150px;">
-                    <p class="text-center">Moleton Cinza</p>
-                    <p class="text-center">R$ 269,90</p>
+                    <img src="../images/malve5.jpg" class="d-block img-fluid align-self-center" alt="..." style="width: 150px; height: 150px;">
+                    <p class="text-center">Conjunto de frio</p>
+                    <p class="text-center">R$ 89,90</p>
                 </div>
             </div>
         </div>
@@ -167,30 +167,30 @@
     </section>
     <section>
         <div class="container">
-            <h1 class="text-center mt-5">Nike</h1>
+            <h1 class="text-center mt-5">Carter Kids</h1>
             <div class="row text-center image">
                 <div class="col-md-2">
-                    <img src="../images/nike1.jpeg" class="d-block img-fluid align-self-center" alt="..." style="width: 150px; height: 150px;">
-                    <p class="text-center">Mochila Preta</p>
-                    <p class="text-center">R$ 199,90</p>
+                    <img src="../images/ca1.jpeg" class="d-block img-fluid align-self-center" alt="..." style="width: 150px; height: 150px;">
+                    <p class="text-center">Kit 3 peça feminino</p>
+                    <p class="text-center">R$ 229,90</p>
                 </div>
                 <div class="col-md-2">
-                    <img src="../images/nike2.jpg" class="d-block img-fluid align-self-center" alt="..." style="width: 150px; height: 150px;">
-                    <p class="text-center">Camiseta Branca</p>
-                    <p class="text-center">R$ 169,90</p>
+                    <img src="../images/ca2.jpeg" class="d-block img-fluid align-self-center" alt="..." style="width: 150px; height: 150px;">
+                    <p class="text-center">Conjunto Calça e blusa masculino</p>
+                    <p class="text-center">R$ 119,90</p>
                 </div>
                 <div class="col-md-2">
-                    <img src="../images/nike3.jpeg" class="d-block img-fluid align-self-center" alt="..." style="width: 150px; height: 150px;">
-                    <p class="text-center">Tênis Air Force branco</p>
-                    <p class="text-center">R$ 449,90</p>
+                    <img src="../images/ca3.jpeg" class="d-block img-fluid align-self-center" alt="..." style="width: 150px; height: 150px;">
+                    <p class="text-center">Kit 3 peças masculino</p>
+                    <p class="text-center">R$ 229,90</p>
                 </div>
                 <div class="col-md-2">
-                    <img src="../images/nike4.jpg" class="d-block img-fluid align-self-center" alt="..." style="width: 150px; height: 150px;">
-                    <p class="text-center">Tênis Air Max</p>
-                    <p class="text-center">R$ 699,90</p></div>
+                    <img src="../images/ca4.jpeg" class="d-block img-fluid align-self-center" alt="..." style="width: 150px; height: 150px;">
+                    <p class="text-center">Kit duas calças</p>
+                    <p class="text-center">R$ 99,90</p></div>
                 <div class="col-md-2">
-                    <img src="../images/nike5.jpeg" class="d-block img-fluid align-self-center" alt="..." style="width: 150px; height: 150px;">
-                    <p class="text-center">Chinelo slide</p>
+                    <img src="../images/ca5.png" class="d-block img-fluid align-self-center" alt="..." style="width: 150px; height: 150px;">
+                    <p class="text-center">Conjunto Calça e blusa feminino</p>
                     <p class="text-center">R$ 129,90</p>
                 </div>
             </div>
