--- a/html/oferta.html
+++ b/html/oferta.html
@@ -42,8 +42,8 @@
                 <ul class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
                   <li><a class="dropdown-item" href="feminino.html">Feminino</a></li>
                   <li><a class="dropdown-item" href="masculino.html">Masculino</a></li>
-                  <li><a class="dropdown-item" href="#">Crianças</a></li>
-                  <li><a class="dropdown-item" href="#">Perfumaria</a></li>
+                  <li><a class="dropdown-item" href="infantil.html">Crianças</a></li>
+                  <li><a class="dropdown-item" href="perfumaria.html">Perfumaria</a></li>
                 </ul>
               </li>
               <li class="nav-item">
@@ -75,7 +75,7 @@
           <div class="row mt-3">
             <div class="col-sm-3">
               <div class="card">
-                <img src="..." class="card-img-top" alt="...">
+                <img src="../images/carmen3.jpg" class="card-img-top" alt="...">
                 <div class="card-body">
                   <h5 class="card-title">Card title</h5>
                   <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
@@ -85,7 +85,7 @@
             </div>
             <div class="col-sm-3">
               <div class="card">
-                <img src="..." class="card-img-top" alt="...">
+                <img src="../images/212rose.jpg" class="card-img-top" alt="...">
                 <div class="card-body">
                   <h5 class="card-title">Card title</h5>
                   <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
@@ -95,7 +95,7 @@
             </div>
             <div class="col-sm-3">
               <div class="card">
-                <img src="..." class="card-img-top" alt="...">
+                <img src="../images/malve4.jpeg" class="card-img-top" alt="...">
                 <div class="card-body">
                   <h5 class="card-title">Card title</h5>
                   <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
@@ -105,7 +105,7 @@
             </div>
             <div class="col-sm-3">
               <div class="card">
-                <img src="..." class="card-img-top" alt="...">
+                <img src="../images/fone.jpg" class="card-img-top" alt="...">
                 <div class="card-body">
                   <h5 class="card-title">Card title</h5>
                   <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
@@ -115,7 +115,7 @@
             </div>
             <div class="col-sm-3">
               <div class="card">
-                <img src="..." class="card-img-top" alt="...">
+                <img src="../images/mouse.jpg" class="card-img-top" alt="...">
                 <div class="card-body">
                   <h5 class="card-title">Card title</h5>
                   <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
@@ -128,7 +128,33 @@
           <div class="row mt-3">
             <div class="col-sm-3">
               <div class="card">
-                <img src="..." class="card-img-top" alt="...">
+                <img src="../images/teclado.jpg" class="card-img-top" alt="...">
+                <div class="card-body">
+                  <h5 class="card-title">Card title</h5>
+                  <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                  <a href="#" class="btn btn-primary">Go somewhere</a>
+                </div>
+              </div>
+            </div>
+          </div>
+
+          <div class="row mt-3">
+            <div class="col-sm-3">
+              <div class="card">
+                <img src="../images/phone3.png" class="card-img-top" alt="...">
+                <div class="card-body">
+                  <h5 class="card-title">Card title</h5>
+                  <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                  <a href="#" class="btn btn-primary">Go somewhere</a>
+                </div>
+              </div>
+            </div>
+          </div>
+
+          <div class="row mt-3">
+            <div class="col-sm-3">
+              <div class="card">
+                <img src="../images/5.png" class="card-img-top" alt="...">
                 <div class="card-body">
                   <h5 class="card-title">Card title</h5>
                   <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
