--- a/html/perfumaria.html
+++ b/html/perfumaria.html
@@ -6,7 +6,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Document</title>
-  <link rel="stylesheet" href="../css/feminino.css">
+  <link rel="stylesheet" href="../css/perfumaria.css">
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.4/font/bootstrap-icons.css">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
@@ -76,17 +76,17 @@
   <main>
     <section>
       <div class="container">
-         <h2 class="text-center mt-4">Para eles!</h2>
+         <h2 class="text-center mt-4">Perfumaria</h2>
          <div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
             <div class="carousel-inner">
               <div class="carousel-item active">
-                <img src="../images/kc.jpeg" class="d-block w-100" alt="...">
+                <img src="../images/carolina.png" class="d-block w-100" alt="...">
               </div>
               <div class="carousel-item">
-                <img src="../images/tommy.png" class="d-block w-100" alt="...">
+                <img src="../images/boticario.png" class="d-block w-100" alt="...">
               </div>
               <div class="carousel-item">
-                <img src="../images/nike.png" class="d-block w-100" alt="...">
+                <img src="../images/Carmen-steffens.png" class="d-block w-100" alt="...">
               </div>
             </div>
             <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="prev">
@@ -102,31 +102,31 @@
     </section>
     <section>
         <div class="container">
-            <h1 class="text-center mt-5">Calvin Klein</h1>
+            <h1 class="text-center mt-5"> Carolina Herrera</h1>
             <div class="row text-center image">
                 <div class="col-md-2">
-                    <img src="../images/ck1.jpeg" class="d-block img-fluid align-self-center" alt="..." style="width: 150px; height: 150px;">
-                    <p class="text-center">Camiseta Preta CK</p>
-                    <p class="text-center">R$ 129,90</p>
+                    <img src="../images/212.jpg" class="d-block img-fluid align-self-center" alt="..." style="width: 150px; height: 150px;">
+                    <p class="text-center">212 VIP</p>
+                    <p class="text-center">R$ 669,90</p>
                 </div>
                 <div class="col-md-2">
-                    <img src="../images/ck2.jpeg" class="d-block img-fluid align-self-center" alt="..." style="width: 150px; height: 150px;">
-                    <p class="text-center">Camiseta Azul CL</p>
-                    <p class="text-center">R$ 79,90</p>
+                    <img src="../images/CH.jpg" class="d-block img-fluid align-self-center" alt="..." style="width: 150px; height: 150px;">
+                    <p class="text-center">Good Girl </p>
+                    <p class="text-center">R$ 688,90</p>
                 </div>
                 <div class="col-md-2">
-                    <img src="../images/ck3.jpeg" class="d-block img-fluid align-self-center" alt="..." style="width: 150px; height: 150px;">
-                    <p class="text-center">Kit 2 cuecas CK</p>
-                    <p class="text-center">R$ 69,90</p>
+                    <img src="../images/212rose.jpg" class="d-block img-fluid align-self-center" alt="..." style="width: 150px; height: 150px;">
+                    <p class="text-center">212 Vip-Rose</p>
+                    <p class="text-center">R$ 599,90</p>
                 </div>
                 <div class="col-md-2">
-                    <img src="../images/ck4.jpeg" class="d-block img-fluid align-self-center" alt="..." style="width: 150px; height: 150px;">
-                    <p class="text-center">Tênis Confort CK</p>
-                    <p class="text-center">R$ 229,90</p></div>
+                    <img src="../images/212red.jpg" class="d-block img-fluid align-self-center" alt="..." style="width: 150px; height: 150px;">
+                    <p class="text-center">212 Vip-Red</p>
+                    <p class="text-center">R$ 329,90</p></div>
                 <div class="col-md-2">
-                    <img src="../images/ck5.jpg" class="d-block img-fluid align-self-center" alt="..." style="width: 150px; height: 150px;">
-                    <p class="text-center">Moleton Preto CK</p>
-                    <p class="text-center">R$ 89,90</p>
+                    <img src="../images/212multicor.jpeg" class="d-block img-fluid align-self-center" alt="..." style="width: 150px; height: 150px;">
+                    <p class="text-center">212-Vip Party Fever</p>
+                    <p class="text-center">R$ 469,90</p>
                 </div>
             </div>
         </div>
@@ -135,31 +135,31 @@
     
     <section>
         <div class="container">
-            <h1 class="text-center mt-5">Tommy Hilfiger</h1>
+            <h1 class="text-center mt-5">O Boticário</h1>
             <div class="row text-center image">
                 <div class="col-md-2">
-                    <img src="../images/tommy1.jpg" class="d-block img-fluid align-self-center" alt="..." style="width: 150px; height: 150px;">
-                    <p class="text-center">Óculos</p>
-                    <p class="text-center">R$ 429,90</p>
+                    <img src="../images/bo1.jpg" class="d-block img-fluid align-self-center" alt="..." style="width: 150px; height: 150px;">
+                    <p class="text-center">Egeo Dolce</p>
+                    <p class="text-center">R$ 129,90</p>
                 </div>
                 <div class="col-md-2">
-                    <img src="../images/tommy2.jpg" class="d-block img-fluid align-self-center" alt="..." style="width: 150px; height: 150px;">
-                    <p class="text-center">Perfume cheiroso</p>
-                    <p class="text-center">R$ 589,90</p>
+                    <img src="../images/bo2.jpg" class="d-block img-fluid align-self-center" alt="..." style="width: 150px; height: 150px;">
+                    <p class="text-center">Kit elysee blanc</p>
+                    <p class="text-center">R$ 329,90</p>
                 </div>
                 <div class="col-md-2">
-                    <img src="../images/tommy3.jpeg" class="d-block img-fluid align-self-center" alt="..." style="width: 150px; height: 150px;">
-                    <p class="text-center">Blusa Preta</p>
-                    <p class="text-center">R$ 139,90</p>
+                    <img src="../images/bo3.jpg" class="d-block img-fluid align-self-center" alt="..." style="width: 150px; height: 150px;">
+                    <p class="text-center">Florata Red</p>
+                    <p class="text-center">R$ 89,90</p>
                 </div>
                 <div class="col-md-2">
-                    <img src="../images/tommy4.jpeg" class="d-block img-fluid align-self-center" alt="..." style="width: 150px; height: 150px;">
-                    <p class="text-center">Carteira</p>
-                    <p class="text-center">R$ 129,90</p></div>
+                    <img src="../images/bo4.jpeg" class="d-block img-fluid align-self-center" alt="..." style="width: 150px; height: 150px;">
+                    <p class="text-center">Coffe Luck</p>
+                    <p class="text-center">R$ 159,90</p></div>
                 <div class="col-md-2">
-                    <img src="../images/tommy5.jpeg" class="d-block img-fluid align-self-center" alt="..." style="width: 150px; height: 150px;">
-                    <p class="text-center">Moleton Cinza</p>
-                    <p class="text-center">R$ 269,90</p>
+                    <img src="../images/bo5.jpeg" class="d-block img-fluid align-self-center" alt="..." style="width: 150px; height: 150px;">
+                    <p class="text-center">Malbec</p>
+                    <p class="text-center">R$ 189,90</p>
                 </div>
             </div>
         </div>
@@ -167,31 +167,31 @@
     </section>
     <section>
         <div class="container">
-            <h1 class="text-center mt-5">Nike</h1>
+            <h1 class="text-center mt-5">Christian Dior</h1>
             <div class="row text-center image">
                 <div class="col-md-2">
-                    <img src="../images/nike1.jpeg" class="d-block img-fluid align-self-center" alt="..." style="width: 150px; height: 150px;">
-                    <p class="text-center">Mochila Preta</p>
-                    <p class="text-center">R$ 199,90</p>
+                    <img src="../images/dior1.jpeg" class="d-block img-fluid align-self-center" alt="..." style="width: 150px; height: 150px;">
+                    <p class="text-center">Miss Dior Rosa</p>
+                    <p class="text-center">R$ 899,90</p>
                 </div>
                 <div class="col-md-2">
-                    <img src="../images/nike2.jpg" class="d-block img-fluid align-self-center" alt="..." style="width: 150px; height: 150px;">
-                    <p class="text-center">Camiseta Branca</p>
-                    <p class="text-center">R$ 169,90</p>
+                    <img src="../images/dior2.jpeg" class="d-block img-fluid align-self-center" alt="..." style="width: 150px; height: 150px;">
+                    <p class="text-center">Miss Dior Rosa Ciclete</p>
+                    <p class="text-center">R$ 857,90</p>
                 </div>
                 <div class="col-md-2">
-                    <img src="../images/nike3.jpeg" class="d-block img-fluid align-self-center" alt="..." style="width: 150px; height: 150px;">
-                    <p class="text-center">Tênis Air Force branco</p>
-                    <p class="text-center">R$ 449,90</p>
+                    <img src="../images/dior3.jpeg" class="d-block img-fluid align-self-center" alt="..." style="width: 150px; height: 150px;">
+                    <p class="text-center">Jadore</p>
+                    <p class="text-center">R$ 959,90</p>
                 </div>
                 <div class="col-md-2">
-                    <img src="../images/nike4.jpg" class="d-block img-fluid align-self-center" alt="..." style="width: 150px; height: 150px;">
-                    <p class="text-center">Tênis Air Max</p>
-                    <p class="text-center">R$ 699,90</p></div>
+                    <img src="../images/dior4.jpeg" class="d-block img-fluid align-self-center" alt="..." style="width: 150px; height: 150px;">
+                    <p class="text-center">Miss Dior Amarelo</p>
+                    <p class="text-center">R$ 879,90</p></div>
                 <div class="col-md-2">
-                    <img src="../images/nike5.jpeg" class="d-block img-fluid align-self-center" alt="..." style="width: 150px; height: 150px;">
-                    <p class="text-center">Chinelo slide</p>
-                    <p class="text-center">R$ 129,90</p>
+                    <img src="../images/dior5.jpeg" class="d-block img-fluid align-self-center" alt="..." style="width: 150px; height: 150px;">
+                    <p class="text-center">Hipnotic</p>
+                    <p class="text-center">R$ 679,90</p>
                 </div>
             </div>
         </div>
