--- a/html/index.html
+++ b/html/index.html
@@ -33,23 +33,23 @@
             <div class="collapse navbar-collapse" id="navbarNav">
               <ul class="navbar-nav">
                 <li class="nav-item">
-                  <a class="nav-link active" aria-current="page" href="#">Digite seu cep</a>
+                  <a class="nav-link active" aria-current="page" href="index.html">Início</a>
                 </li>
                 <li class="nav-item">
                   <a class="nav-link active" href="historico.html">Histórico de compra</a>
                 </li>
                 <li class="nav-item dropdown">
-                  <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button"
-                    data-bs-toggle="dropdown" aria-expanded="false">
+                  <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button" data-bs-toggle="dropdown" aria-expanded="false">
                     Categoria
                   </a>
-                  <ul class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-                    <li><a class="dropdown-item" href="#">Feminino</a></li>
-                    <li><a class="dropdown-item" href="#">Masculino</a></li>
-                    <li><a class="dropdown-item" href="#">Crianças</a></li>
-                    <li><a class="dropdown-item" href="#">Perfumaria</a></li>
+                  <ul class="dropdown-menu custom-class" aria-labelledby="navbarDropdownMenuLink">
+                    <li><a class="dropdown-item" href="feminino.html">Feminino</a></li>
+                    <li><a class="dropdown-item" href="masculino.html">Masculino</a></li>
+                    <li><a class="dropdown-item" href="infantil.html">Crianças</a></li>
+                    <li><a class="dropdown-item" href="perfumaria.html">Perfumaria</a></li>
                   </ul>
                 </li>
+                
                 <li class="nav-item">
                   <a class="nav-link active" href="oferta.html">Ofertas do dia</a>
                 </li>
@@ -105,163 +105,157 @@
             </div>
         </section>
         <section> 
-            <h2 class="text-center mt-5">OFERTAS DO DIA! </h2>
-            <div class="container">
-                <div class="row">
-                  <div class="col">
-                    <div class="card card">
-                      <!-- <img src="../images/oferta2.jpg" class="card-img-top" alt="..."> -->
-                      <div class="card-body">
-                        Ver oferta
-                        <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                        <a href="#" class="btn btn-primary">Ver oferta</a>
-                      </div>
-                    </div>
-                  </div>
-                  <div class="col">
-                    <div class="card card">
-                      <!-- <img src="../images/oferta3.jpg" class="card-img-top" alt="..."> -->
-                      <div class="card-body">
-                        Ver oferta
-                        <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                        <a href="#" class="btn btn-primary">Ver oferta</a>
-                      </div>
-                    </div>
-                  </div>
-                  <div class="col">
-                    <div class="card card">
-                      <!-- <img src="../images/oferta4.jpg" class="card-img-top" alt="..."> -->
-                      <div class="card-body">
-                        Ver oferta
-                        <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                        <a href="#" class="btn btn-primary">Ver oferta</a>
-                      </div>
-                    </div>
-                  </div>
-                  <div class="col">
-                    <div class="card card">
-                      <!-- <img src="../images/fone.jpg" class="card-img-top" alt="..."> -->
-                      <div class="card-body">
-                        Ver oferta
-                        <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                        <a href="#" class="btn btn-primary">Ver oferta</a>
-                      </div>
-                    </div>
-                  </div>
-                  <div class="col">
-                    <div class="card card">
-                      <!-- <img src="../images/oferta5.jpeg" class="card-img-top" alt="..."> -->
-                      <div class="card-body">
-                        Ver oferta
-                        <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                        <a href="#" class="btn btn-primary">Ver oferta</a>
-                      </div>
-                    </div>
+          <h2 class="text-center mt-5 text">Ofertas do dia! <i class="bi bi-bag-heart"></i></h2>
+          <div class="container">
+            <div class="row mulher">
+              <div class="col-sm-6 col-md-4 col-lg-2 mb-3">
+                <div class="card">
+                  <img src="../images/oferta2.jpg" class="card-img-top img-fluid as" alt="...">
+                  <div class="card-body">
+                    <p class="text-center roupa">Aspirador de pó</p>
+                    <p class="text-center antigo">R$ 129,90 </p>
+                    <p class="text-center valor">R$ 99,90</p> 
                   </div>
                 </div>
-              </div>               
+              </div>
+              <div class="col-sm-6 col-md-4 col-lg-2 mb-3">
+                <div class="card">
+                  <img src="../images/oferta3.jpg" class="card-img-top img-fluid caf" alt="...">
+                  <div class="card-body">
+                    <p class="text-center roupa">Cafeteira Oster</p>
+                    <p class="text-center antigo">R$ 799,90 </p>
+                    <p class="text-center valor">R$ 499,90 </p>
+                  </div>
+                </div>
+              </div>
+              <div class="col-sm-6 col-md-4 col-lg-2 mb-3">
+                <div class="card">
+                  <img src="../images/oferta4.jpg" class="card-img-top img-fluid br" alt="...">
+                  <div class="card-body">
+                    <p class="text-center roupa">Base Boca Rosa</p>
+                    <p class="text-center antigo">R$ 69,90 </p>
+                    <p class="text-center valor">R$ 49,90 </p>
+                  </div>
+                </div>
+              </div>
+              <div class="col-sm-6 col-md-4 col-lg-2 mb-3">
+                <div class="card">
+                  <img src="../images/fone.jpg" class="card-img-top img-fluid fone" alt="...">
+                  <div class="card-body">
+                    <p class="text-center roupa">Fone JBL</p>
+                    <p class="text-center antigo">R$ 249,90 </p>
+                    <p class="text-center valor">R$ 139,90 </p>
+                  </div>
+                </div>
+              </div>
+              <div class="col-sm-6 col-md-4 col-lg-2 mb-3">
+                <div class="card">
+                  <img src="../images/oferta5.jpeg" class="card-img-top img-fluid" alt="...">
+                  <div class="card-body pneu">
+                    <p class="text-center roupa">Pneu De Carro</p>
+                    <p class="text-center antigo">R$ 349,90 </p>
+                    <p class="text-center valor">R$ 239,90 </p>
+                  </div>
+                </div>
+              </div>
+            </div>
+            <div class="d-flex justify-content-center">
+              <a class="btn btn-primary btn-sm" href="oferta.html">Ver mais</a>
+            </div>
+          </div>
         </section>
 
         <section> 
-            <h2 class="text-center mt-5">UM CARROSSEL DE ELEGÂNCIA PARA AS MULHERES </h2>
-            <div class="container">
-              <div class="row">
-                <div class="col-sm-6 col-md-4 col-lg-2 mb-3">
-                  <div class="card">
-                    <!-- <img src="../images/oferta2.jpg" class="card-img-top" alt="..."> -->
-                    <div class="card-body">
-                      Ver oferta
-                      <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                      <a href="#" class="btn btn-primary">Ver oferta</a>
-                    </div>
-                  </div>
-                </div>
-                <div class="col-sm-6 col-md-4 col-lg-2 mb-3">
-                  <div class="card">
-                    <!-- <img src="../images/oferta3.jpg" class="card-img-top" alt="..."> -->
-                    <div class="card-body">
-                      Ver oferta
-                      <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                      <a href="#" class="btn btn-primary">Ver oferta</a>
-                    </div>
-                  </div>
-                </div>
-                <div class="col-sm-6 col-md-4 col-lg-2 mb-3">
-                  <div class="card">
-                    <!-- <img src="../images/oferta4.jpg" class="card-img-top" alt="..."> -->
-                    <div class="card-body">
-                      Ver oferta
-                      <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                      <a href="#" class="btn btn-primary">Ver oferta</a>
-                    </div>
-                  </div>
-                </div>
-                <div class="col-sm-6 col-md-4 col-lg-2 mb-3">
-                  <div class="card">
-                    <!-- <img src="../images/fone.jpg" class="card-img-top" alt="..."> -->
-                    <div class="card-body">
-                      Ver oferta
-                      <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                      <a href="#" class="btn btn-primary">Ver oferta</a>
-                    </div>
-                  </div>
-                </div>
-                <div class="col-sm-6 col-md-4 col-lg-2 mb-3">
-                  <div class="card">
-                    <!-- <img src="../images/oferta5.jpeg" class="card-img-top" alt="..."> -->
-                    <div class="card-body">
-                      Ver oferta
-                      <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                      <a href="#" class="btn btn-primary">Ver oferta</a>
-                    </div>
+          <h2 class="text-center mt-5 text">UM CARROSSEL DE ELEGÂNCIA PARA AS MULHERES </h2>
+          <div class="container">
+            <div class="row mulher">
+              <div class="col-sm-6 col-md-4 col-lg-2 mb-3">
+                <div class="card">
+                  <img src="../images/roupa1.jpg" class="card-img-top" alt="...">
+                  <div class="card-body">
+                    <p class="text-center roupa">Vestido Rosa</p>
+                    <p class="text-center valor">R$ 79,90</p> 
                   </div>
                 </div>
               </div>
-              <div class="d-flex justify-content-center">
-                <button type="button" class="btn btn-primary btn-sm">Small button</button>
+              <div class="col-sm-6 col-md-4 col-lg-2 mb-3">
+                <div class="card">
+                  <img src="../images/roupa2.jpg" class="card-img-top" alt="...">
+                  <div class="card-body">
+                    <p class="text-center roupa">Blusa Estilosa</p>
+                    <p class="text-center valor">R$ 49,90 </p>
+                  </div>
+                </div>
+              </div>
+              <div class="col-sm-6 col-md-4 col-lg-2 mb-3">
+                <div class="card">
+                  <img src="../images/roupa3.jpg" class="card-img-top" alt="...">
+                  <div class="card-body">
+                    <p class="text-center roupa">Saia Couro Fake</p>
+                    <p class="text-center valor">R$ 69,90 </p>
+                  </div>
+                </div>
+              </div>
+              <div class="col-sm-6 col-md-4 col-lg-2 mb-3">
+                <div class="card">
+                  <img src="../images/roupa4.jpg" class="card-img-top" alt="...">
+                  <div class="card-body">
+                    <p class="text-center roupa">Croped Corset</p>
+                    <p class="text-center valor">R$ 39,90 </p>
+                  </div>
+                </div>
               </div>
             </div>
+            <div class="d-flex justify-content-center">
+              <a class="btn btn-primary btn-sm" href="feminino.html">Ver mais</a>
+            </div>
+          </div>
         </section>
+        <section class="section-child text-center">
+          <h2 class="mt-5 mb-5 child ">A criaçada amaaaa!</h2>
+          <div class="container">
+            <div class="row justify-content-center">
+              <div class="col-sm-6 col-md-4 col-lg-2 mb-3">
+                <div class="card">
+                  <img src="../images/brinquedo.jpg" class="card-img-top" alt="...">
+                  <div class="card-body">
+                    <h5 class="card-title">Carrinhos Carro</h5>
+                    <p class="card-text" >R$ 59,99</p>
+                  </div>
+                </div>
+              </div>
+              <div class="col-sm-6 col-md-4 col-lg-2 mb-3">
+                <div class="card">
+                  <img src="../images/brinquedo2.jpg" class="card-img-top" alt="...">
+                  <div class="card-body">
+                    <h5 class="card-title">Barbie</h5>
+                    <p class="card-text" > R$ 99,99</p>
+                  </div>
+                </div>
+              </div>
+              <div class="col-sm-6 col-md-4 col-lg-2 mb-3">
+                <div class="card">
+                  <img src="../images/brinquedo3.jpg" class="card-img-top" alt="...">
+                  <div class="card-body">
+                    <h5 class="card-title">Pula Pula</h5>
+                    <p class="card-text" > R$ 999,90</p>
+                  </div>
+                </div>
+              </div>
+              <div class="col-sm-6 col-md-4 col-lg-2 mb-3">
+                <div class="card">
+                  <img src="../images/brinquedo4.jpg" class="card-img-top" alt="...">
+                  <div class="card-body">
+                    <h5 class="card-title">Kit 4 livros de pintar</h5>
+                    <p class="card-text">R$ 59,99</p>
+                  </div>
+                </div>
+              </div>
+            </div>
+            <button type="button" class="btn btn-primary btn-sm mt-5 mb-5">Ver mais</button>
+          </div>
+        </section>        
         
-        <section class="section-child">
-            <h2 class="text-center mt-5 child">A criaçada amaaaa! </h2>
-            <div class="container "> 
-              <div class="row">
-                <div class="col-sm-6 col-md-4 col-lg-2 mb-3">
-                  <div class="card" >
-                    <img src="..." class="card-img-top" alt="...">
-                    <div class="card-body">
-                      <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                    </div>
-                  </div>
-                </div>
-                <div class="col-sm-6 col-md-4 col-lg-2 mb-3">
-                  <div class="card" >
-                    <img src="..." class="card-img-top" alt="...">
-                    <div class="card-body">
-                      <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                    </div>
-                  </div>
-                </div>
-                <div class="col-sm-6 col-md-4 col-lg-2 mb-3">
-                  <div class="card" >
-                    <img src="..." class="card-img-top" alt="...">
-                    <div class="card-body">
-                      <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                    </div>
-                  </div>
-                </div>
-                <div class="col-sm-6 col-md-4 col-lg-2 mb-3">
-                  <div class="card" >
-                    <img src="..." class="card-img-top" alt="...">
-                    <div class="card-body">
-                      <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                    </div>
-                  </div>
-                </div>
-              </div>
-            </div>
-        </section>
 <!--         
         <section>
             <h2 class="text-center">As melhores te esperam</h2>
