--- a/html/masculino.html
+++ b/html/masculino.html
@@ -33,7 +33,7 @@
           <div class="collapse navbar-collapse" id="navbarNav">
             <ul class="navbar-nav">
               <li class="nav-item">
-                <a class="nav-link active" aria-current="page" href="#">Digite seu cep</a>
+                <a class="nav-link active" aria-current="page" href="index.html">Início</a>
               </li>
               <li class="nav-item">
                 <a class="nav-link active" href="historico.html">Histórico de compra</a>
