--- a/html/sobre.html
+++ b/html/sobre.html
@@ -32,7 +32,7 @@
               <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav">
                   <li class="nav-item">
-                    <a class="nav-link active" aria-current="page" href="#">Digite seu cep</a>
+                    <a class="nav-link active" aria-current="page" href="index.html">Início</a>
                   </li>
                   <li class="nav-item">
                     <a class="nav-link active" href="historico.html">Histórico de compra</a>
@@ -42,11 +42,11 @@
                       Categoria
                     </a>
                     <ul class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-                      <li><a class="dropdown-item" href="#">Feminino</a></li>
-                      <li><a class="dropdown-item" href="#">Masculino</a></li>
-                      <li><a class="dropdown-item" href="#">Crianças</a></li>
-                      <li><a class="dropdown-item" href="#">Perfumaria</a></li>
-                    </ul>
+                     <li><a class="dropdown-item" href="feminino.html">Feminino</a></li>
+                     <li><a class="dropdown-item" href="masculino.html">Masculino</a></li>
+                     <li><a class="dropdown-item" href="infantil.html">Crianças</a></li>
+                     <li><a class="dropdown-item" href="perfumaria.html">Perfumaria</a></li>
+                     </ul>
                   </li>
                   <li class="nav-item">
                     <a class="nav-link active" href="oferta.html" >Ofertas do dia</a>
